Add options
Add -i (stdin) to base64
Add support for enabled secman to startserver